fixed footer + page width on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -1,8 +1,8 @@
-/* html, body {
+html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
-} */
+}
 
 :root {
 	--cl-background: #cccccc;
@@ -16,9 +16,10 @@
 }
 
 body {
+	display: flex;
+  flex-direction: column;
 	color: var(--cl-text);
 	margin: 0;
-	/* padding: 8px; */
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
